--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Source Code Pro', monospace;
+    overflow-wrap: break-word;
 }
 
 body {
@@ -14,3 +15,10 @@ body {
     height: 100vh;
 }
 
+.h-30vh {
+    height: 30vh;
+}
+
+.f {
+    border: 2px solid red;
+}
