--- a/css/home.css
+++ b/css/home.css
@@ -10,12 +10,43 @@ nav p {
     transition: top 0.3s;
   }
 
-  .nav-link {
-      font-size: 1.3rem;
-  }
 
+.nav-link {
+    font-size: 1.3rem;
+}
+
+#bottom {
+    overflow: hidden;  /* Hide the element content, while height = 0 */
+    height: 0;
+    opacity: 0;
+    transition: height 0ms 400ms, opacity 400ms 0ms;
+}
+#bottom.visible {
+    height: auto; opacity: 1;
+    transition: height 0ms 0ms, opacity 600ms 0ms;
+}
 @media (max-width: 768px) {
     #ending-text {
         font-size: 1.5rem;
     }
+}
+
+.fas {
+    color: lightgreen;
+}
+
+.no-color {
+    color: inherit;
+}
+.no-color:hover {
+    color: inherit;
+    /* no underline */
+    text-decoration: none;
+}
+hr {
+    border-color: white;
+}
+
+img {
+    z-index: -1;
 }
