--- a/css/index.css
+++ b/css/index.css
@@ -73,3 +73,15 @@
 .arrow:active {
     transform: translateX(-50%) translateY(-50%) scale(0.9);
 }
+
+#navigation {
+    overflow: hidden;  /* Hide the element content, while height = 0 */
+    height: 0;
+    opacity: 0;
+    transition: height 0ms 400ms, opacity 400ms 0ms;
+}
+#navigation.visible {
+    overflow: visible;
+    height: auto; opacity: 1;
+    transition: height 0ms 0ms, opacity 600ms 0ms;
+}
