--- a/css/main.css
+++ b/css/main.css
@@ -50,3 +50,14 @@ a {
 .mh-700px {
     max-height: 700px;
 }
+
+
+body::-webkit-scrollbar {
+	background-color: #2c2c2c;
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: #6b6b6b;
+  border-radius: 20px;
+}
